code cleanup as suggested in Bugzilla 50446
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1044405 13f79535-47bb-0310-9956-ffa450edef68